[package]
name = "rusix"
version = "0.1.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
description = "Rust Distributed Posix Cluster"
license = "Apache-2.0"
readme = "README.md"

[package.metadata.deb]
depends = "$auto"
section = "utility"
assets = [ 
    ["target/release/cli", "usr/bin/", "755"],
    ["target/release/rusixd", "usr/sbin/", "755"],
    ["README.md", "usr/share/doc/rusix/README", "644"],
]

[workspace]

[dependencies]
api = { path = "api" }
block-utils = {git = "https://github.com/cholcombe973/block-utils"}
clap = "~2.32" 
dmi = {git = "https://github.com/cholcombe973/dmi"}
flatbuffers = "~0.5"
fstab = "~0.3" 
futures = "~0.1"
futures-cpupool = "~0.1"
init-daemon = "~0.1" 
libatasmart = "*" 
libc = "~0.2" 
log = "~0.4" 
nix = "~0.11"
petgraph = "~0.4"
rayon = "~1.0"
rusqlite = "~0.14" 
serde = "~1.0" 
serde_derive = "~1.0" 
serde_json = "~1.0" 
simplelog = "~0.5" 
tempdir = "~0.3" 
toml = "~0.4"
twox-hash = "~1.1"
uname = "~0.1" 
uuid = { version="~0.7", features = ["v4"]}
zmq = {version="~0.8"}
